deployments/openshift/kustomize/base/elasticsearch/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: es-cluster
    labels:
        "app.kubernetes.io/part-of": ek-stack
spec:
    serviceName: elasticsearch
    replicas: 2
    selector:
        matchLabels:
            app: elasticsearch
    template:
        metadata:
            labels:
                app: elasticsearch
        spec:
            containers:
                - name: elasticsearch
                  image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
                  resources:
                      limits:
                          cpu: 300m
                          memory: 3Gi
                      requests:
                          cpu: 10m
                          memory: 1.5Gi
                  ports:
                      - name: rest
                        containerPort: 9200
                        protocol: TCP
                      - name: inter-node
                        containerPort: 9300
                        protocol: TCP
                  volumeMounts:
                      - name: elasticsearch-data
                        mountPath: /usr/share/elasticsearch/data
                  volumes:
                  - name: elasticsearch-data
                    persistentVolumeClaim:
                      claimName: elasticsearch-data
                  securityContext:
                        allowPrivilegeEscalation: false
                        runAsNonRoot: true
                        capabilities:
                          drop:
                            - ALL
    volumeClaimTemplates:
        - metadata:
              name: elasticsearch-data
              labels:
                  app: elasticsearch
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: netapp-file-standard
              resources:
                  requests:
                      storage: "1Gi"
