deployments/openshift/kustomize/base/elasticsearch/service.yml

apiVersion: v1
kind: Service
metadata:
    name: elasticsearch
    labels:
        app: elasticsearch
spec:
    selector:
        app: elasticsearch
    clusterIP: None
    ports:
        - port: 9200
          name: rest
        - port: 9300
          name: inter-node
