deployments/openshift/kustomize/base/elasticsearch/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
spec:
  to:
    kind: Service
    name: elasticsearch
  port:
    targetPort: 9200
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
